--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "yellowcake",
-  "HomePage": "https://yellowcake.netlify.com/",
-  "description": "An opinionated starter project for creating lightning-fast websites with Gatsby v2 and Netlify CMS v2",
+  "name": "xilinapatomata",
+  "HomePage": "https://xilinapatomata.netlify.app/",
+  "description": "A project for creating lightning-fast websites with Gatsby v2 and Netlify CMS v2",
   "version": "2.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/thriveweb/yellowcake"
+    "url": "https://xilinapatomata.netlify.app"
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
