--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^16.11.0",
     "react-feather": "^2.0.3",
     "react-helmet": "^5.2.1",
+    "react-image-gallery": "^1.0.8",
     "react-markdown": "^4.2.2",
     "react-photoswipe": "^1.3.0"
   },
