--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,8 @@
 # See https://github.com/netlify/netlify-cms/blob/master/example/config.yml
 backend:
   name: git-gateway
-  branch: main # Branch to update (optional; defaults to master)
+  repo: xilinapatomata/xilinapatomata
+  branch: master
 
 # display_url: https://gatsbro.netlify.com # This url will display in the top-right of the CMS
 media_library:
